1. Setup overall framework for Trello experience API application and resources. 2. Implemented Companies resource and lone endpoint! 3. Added a "scratchpad" file within project to gitignore as it won't be part of the actual applictaion.

--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,6 @@ ENV/
 
 # Config and secret key files
 configs.py
+
+# Scratchpad file to help work through the logic and Python syntax of consuming and reformating the Trello API
+scratchpad.py
