1.) Renamed config files 2.) Added try/except logic to load variables from config file (as this is only relevant when running app locally) vs. grabbing IDs from environment variables if running on server.

--- a/.gitignore
+++ b/.gitignore
@@ -104,7 +104,7 @@ ENV/
 .DS_Store
 
 # Config and secret key files
-configs.py
+config.py
 
 # Scratchpad file to help work through the logic and Python syntax of consuming and reformating the Trello API
 scratchpad.py
