--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -2,5 +2,5 @@
 http-socket = :$(PORT)
 master = true
 die-on-term = true
-module = run:trello_api_app
+module = run:application
 memory-report = true
